# amiga_primitives

./: .dockerignore  .gitignore  Makefile  README.md  pyproject.toml
cfg/: amiga.yaml  realsense.yaml  zed.yaml  zmq_backend.yaml
cfg/scripts/: dev.yaml
cfg/tools/: collect_grasp_demo.yaml  eyeinhand.yaml  grasp_params.yaml  train_grasp.yaml
dockerfiles/: Dockerfile.amiga  Dockerfile.base  Dockerfile.base-gpu  Dockerfile.localuser  Dockerfile.localuser-gpu  Dockerfile.realsense  Dockerfile.torch  Dockerfile.zed  Dockerfile.zed-orin  requirements-orin.txt  requirements.txt
src/amiga/: __main__.py  data.py  models.py  utils.py  vision.py
src/amiga/drivers/: amiga.py  cameras.py  robotiq3f.py  zmq.py
src/amiga/primitives/: __init__.py  grasp_shelf.py  handover.py  place.py
src/amiga/scripts/: __init__.py  dev.py
src/amiga/tools/: collect_grasp_demos.py  detect_objects.py  eye_in_hand.py  get_img.py  learning_grasp_params.py  robot.py  train_grasp_model.py
src/tests/: test_models.py  test_vision.py
